fix text overflow

--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -61,7 +61,7 @@ aside {
     .accounts-dialog {
       width: 19.5vw;
     }
-    
+
     h2 {
       border-top: #bac solid 1px;
       padding-top: 20px;
@@ -121,6 +121,7 @@ aside {
       margin-left: 50px;
       font-size: 20px;
       margin-bottom: 0;
+      word-wrap: break-word;
     }
 
     li {
